<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:summary="@string/setting_printer"
		android:title="@string/setting_printer">
		<ListPreference
			android:summary="@string/printer_value"
			android:title="@string/printer_title"
			android:key="printer"
			android:entries="@array/printer"
			android:entryValues="@array/printerValues"
		/>
		<ListPreference
			android:key="destinationName"
			android:title="@string/destinationName_title"
			android:summary="@string/destinationName_text"
			android:defaultValue="@string/destinationName_default"
		/>
		<ListPreference
			android:key="port"
			android:summary="@string/port_value"
			android:title="@string/port_title"
			android:enabled="false"/>
		<EditTextPreference
			android:key="address"
			android:summary="@string/address_value"
			android:title="@string/address_title"
			android:enabled="true"/>
		<EditTextPreference
			android:key="macAddress"
			android:summary="@string/macAddress_value"
			android:title="@string/macAddress_title"
			android:enabled="true"/>
		<ListPreference
			android:key="paperSize"
			android:summary="@string/paperSize_value"
			android:title="@string/paperSize_title"
		/>	
		<ListPreference
			android:key="orientation"
			android:summary="@string/orientation_value"
			android:title="@string/orientation_title"
			android:entryValues="@array/orientationValues"
			android:entries="@array/orientation"
		/>
		<ListPreference
			android:key="printMode"
			android:entryValues="@array/fitToPageValues"
			android:entries="@array/fitToPage"
			android:summary="@string/fitToPage_value"
			android:title="@string/fitToPage_title"
			android:enabled="true"
		/>
		<EditTextPreference
			android:key="numberOfCopies"
			android:summary="@string/numberOfCopies_value"
			android:title="@string/numberOfCopies_title"
			android:numeric="integer"
			android:maxLength="5"
			android:enabled="true"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:summary="@string/setting_graphic"
		android:title="@string/setting_graphic">
		<ListPreference
			android:key="halftone"
			android:entryValues="@array/halfToningValues"
			android:entries="@array/halfToning"
			android:summary="@string/halfToning_value"
			android:title="@string/halfToning_title"
		/>
	</PreferenceCategory>
	<PreferenceCategory
		android:summary="@string/setting_alignment"
		android:title="@string/setting_alignment">
		<ListPreference
			android:key="align"
			android:summary="@string/align_value"
			android:title="@string/align_title"
			android:entryValues="@array/alignValues"
			android:entries="@array/align"/>
		<EditTextPreference
			android:key="leftMargin"
			android:summary="@string/leftMargin_value"
			android:title="@string/leftMargin_title"
			android:numeric="integer"
			android:maxLength="5"
			android:enabled="true"/>
		<ListPreference
			android:key="valign"
			android:summary="@string/valign_value"
			android:title="@string/valign_title"
			android:entryValues="@array/valignValues"
			android:entries="@array/valign"/>
		<EditTextPreference
			android:key="topMargin"
			android:summary="@string/topMargin_value"
			android:title="@string/topMargin_title"
			android:numeric="integer"
			android:maxLength="5"
			android:enabled="true"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:summary="@string/setting_PJ"
		android:title="@string/setting_PJ">
		<ListPreference
			android:key="pjCarbon"
			android:entryValues="@array/isCarbonValues"
			android:entries="@array/isCarbon"
			android:summary="@string/isCarbon_value"
			android:title="@string/isCarbon_title"
			android:enabled="true"/>
		<ListPreference
			android:key="pjDensity"
			android:entryValues="@array/pjDensityValues"
			android:entries="@array/pjDensityValues"
			android:summary="@string/pjDensity_value"
			android:title="@string/pjDensity_title"
			android:enabled="true"/>
		<ListPreference
			android:key="pjFeedMode"
			android:entryValues="@array/feedModeValues"
			android:entries="@array/feedMode"
			android:summary="@string/feedMode_value"
			android:title="@string/feedMode_title"
			android:enabled="true"/>
		<EditTextPreference
			android:key="customPaperWidth"
			android:summary="@string/customPaperWidth_value"
			android:title="@string/customPaperWidth_title"
			android:numeric="signed"
			android:maxLength="5"
			android:enabled="true"/>
		<EditTextPreference
			android:key="customPaperLength"
			android:summary="@string/customPaperLength_value"
			android:title="@string/customPaperLength_title"
			android:numeric="signed"
			android:maxLength="5"
			android:enabled="true"/>
		<EditTextPreference
			android:key="customFeed"
			android:summary="@string/customFeed_value"
			android:title="@string/customFeed_title"
			android:numeric="signed"
			android:maxLength="5"
			android:enabled="true"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:summary="@string/setting_CustomInfo"
		android:title="@string/setting_CustomInfo">
		<ListPreference
			android:key="customSetting"
			android:summary="@string/customSetting_value"
			android:title="@string/customSetting_title"
			android:enabled="true"/>
		<ListPreference
			android:key="rjDensity"
			android:entryValues="@array/rjDensityValues"
			android:entries="@array/rjDensityValues"
			android:summary="@string/rjDensity_value"
			android:title="@string/rjDensity_title"
			android:enabled="true"/>
	</PreferenceCategory>	
</PreferenceScreen>
